--- a/notebook/ligand_analysis.ipynb
+++ b/notebook/ligand_analysis.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = CatDataset(root='../dataset/processed',name=\"lig_cat_dataset_xtbopt_new_62755\",read_coord=True,save_smiles=True)\n",
+    "dataset = CatDataset(root='../dataset/processed',name=\"catcompdb\",read_coord=True,save_smiles=True)\n",
     "full_dataset = np.load(\"../dataset/processed/lig_cat_dataset_new.npy\",allow_pickle=True)\n",
     "smiles_with_opt_lst = [data.smiles for data in dataset]\n",
     "mol_with_opt_lst = [Chem.MolFromSmiles(smi) for smi in smiles_with_opt_lst]\n",
